# ProyectoResidencias

./: .gitignore  CMakeLists.txt  Makefile  custom-compiler-sdcc-stm8.yaml
include/: pic18f45k50.h
src/: Makefile  main.c  support.h
src/linker/: 18f45k50.lkr
